--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,3 +26,43 @@ summary{
     -ms-user-select: none;
     user-select: none;
   }
+
+  .challengebox {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #ffffff;
+  }
+
+  /*Ids*/
+
+  #content-wrapper{
+    display:table;
+  }
+  
+  #content{
+    display:table-row;
+  }
+  
+  #content>div{
+    display:table-cell
+  }
+  
+  .column-challenge {
+    float: left;
+    width: 66%;
+    text-align: justify;
+    margin:2%;
+  }
+
+  .column-company {
+    float: left;
+    width: 26%;
+    text-align: justify;
+    margin:2%;
+  }
+
+/* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
