--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,66 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="unselectable" style="text-align:center">
-  <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
-  <img id="hackeps-logo" class="rounded transition-logo" src="../../assets/img/HACKEPSweb.png" alt="HackEps logo" style="max-width: 25%;">
-  <div class='timer-font'>
-    00:00:00
-  </div>
-</div>
-
-<router-outlet></router-outlet>
+<div class="unselectable" >
+    <div style="text-align:center">
+       <br>
+       <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+       <a href="https://lleidahack.github.io/hackeps2018/"><img id="hackeps-logo" class="rounded transition-logo" src="../../assets/img/HACKEPSweb.png" alt="HackEps logo" style="max-width: 25%;"></a>
+       <div class='timer-font'>
+          00:00:00
+       </div>
+    </div>
+    <div class='challengebox'>
+       <h1 class='hackday-font-black' style="text-align:center">
+          <br>
+          Retos de la HackEPS 2018:
+          <br>
+       </h1>
+       <div class="row">
+          <div class="column-company">
+          </div>
+          <div class="column-challenge">
+             <h1 class='hackday-font-black'>Reto EPS</h1>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             <br><br><b>Recompensa: </b> (Recompensa)
+          </div>
+       </div>
+       <hr>
+       <div class="row">
+          <div class="column-challenge">
+             <h1 class='hackday-font-black'>Reto Xtrategics</h1>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             <br><br><b>Recompensa: </b> (Recompensa)
+          </div>
+          <div class="column-company"></div>
+       </div>
+       <hr>
+       <div class="row">
+          <div class="column-company">
+          </div>
+          <div class="column-challenge">
+             <h1 class='hackday-font-black'>Reto Stratesys</h1>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             <br><br><b>Recompensa: </b> (Recompensa)
+          </div>
+       </div>
+       <hr>
+       <div class="row">
+          <div class="column-challenge">
+             <h1 class='hackday-font-black'>Reto bonÀrea</h1>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             <br><br><b>Recompensa: </b> (Recompensa)
+          </div>
+          <div class="column-company"></div>
+       </div>
+       <hr>
+       <div class="row">
+          <div class="column-company">
+          </div>
+          <div class="column-challenge">
+             <h1 class='hackday-font-black'>Reto SEMIC</h1>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             <br><br><b>Recompensa: </b> (Recompensa)
+          </div>
+       </div>
+    </div>
+ </div>
+ <router-outlet></router-outlet>
