--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@
        </h1>
        <div class="row">
           <div class="column-company">
+              <img src="../../assets/img/EPS.png" alt="Escola Politècnica Superior" class="company-logo">
           </div>
           <div class="column-challenge">
              <h1 class='hackday-font-black'>Reto EPS</h1>
@@ -30,11 +31,14 @@
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              <br><br><b>Recompensa: </b> (Recompensa)
           </div>
-          <div class="column-company"></div>
+          <div class="column-company">
+              <img src="../../assets/img/xtrategics.png" alt="Escola Politècnica Superior" class="company-logo">
+          </div>
        </div>
        <hr>
        <div class="row">
           <div class="column-company">
+              <img src="../../assets/img/stratesys.png" alt="Escola Politècnica Superior" class="company-logo">
           </div>
           <div class="column-challenge">
              <h1 class='hackday-font-black'>Reto Stratesys</h1>
@@ -49,11 +53,14 @@
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              <br><br><b>Recompensa: </b> (Recompensa)
           </div>
-          <div class="column-company"></div>
+          <div class="column-company">
+              <img src="../../assets/img/bonarea.png" alt="Escola Politècnica Superior" class="company-logo">
+          </div>
        </div>
        <hr>
        <div class="row">
           <div class="column-company">
+              <img src="../../assets/img/semic.png" alt="Escola Politècnica Superior" class="company-logo">
           </div>
           <div class="column-challenge">
              <h1 class='hackday-font-black'>Reto SEMIC</h1>
