Added countdown timer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
        <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
        <a href="https://lleidahack.github.io/hackeps2018/"><img id="hackeps-logo" class="rounded transition-logo" src="../../assets/img/HACKEPSweb.png" alt="HackEps logo" style="max-width: 25%;"></a>
        <div class='timer-font'>
-          00:00:00
+          <countdown-timer [end]="'2018-11-18 12:00:00'"></countdown-timer>
        </div>
     </div>
     <div class='challengebox'>
