Changed color of timer to white

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,6 +13,10 @@ summary{
     color: #88929a;
   }
 
+  .timer-white-font {
+    color: white;
+  }
+
   .timer-font{
     font-family: 'Orbitron', sans-serif;
     font-weight: bold;
