--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
                 Como todos sabéis a los profesores les encantan proponer proyectos a los alumnos y los de la EPS no iban a ser menos. El reto propuesto, consiste en desarrollar una aplicación con el objetivo de ejecutar un flujo de trabajo que concluya con una propuesta de proyecto, asignada a un alumno, dirigida por un profesor y visada por el coordinador de la titulación. La propuesta de proyecto, que tanto podrá ser iniciada por un alumno como por un profesor, pasará por diferentes fases en las que la propuesta va sufriendo modificaciones. Se quiere disponer de trazabilidad de cada una de estas versiones. La aplicación pretende ser multiplataforma, por lo tanto hay que tener en cuenta el responsive, así como las funciones on-line off-line.
              </p>
              <p>Tecnologías: A gusto del programador, tanto lenguaje como cliente/servidor.</p>
-             <!--<p><a href="../assets/pdf/Proposta Repte EPS 2018.pdf" target=_blank>Documentación reto EPS</a></p>-->
+             <p><a href="../assets/pdf/Proposta Repte EPS 2018.pdf" target=_blank>Documentación reto EPS</a></p>
              <b>Recompensa: ... </b>
           </div>
        </div>
@@ -37,7 +37,7 @@
              <h1 class='hackday-font-black'>Asistente interactivo para un centro de salud</h1>
              Integrar un asistente de voz en el proceso de sol·licitud de cita y  de check-in en un centro de salud.
              <p>Tecnologías: A gusto del programador, tanto lenguaje como cliente/servidor.</p>
-             <!--<p><a href="../assets/pdf/Xtrategics - hackEPS Lleida 2018.pdf" target=_blank>Documentación reto Xtrategics</a></p>-->
+             <p><a href="../assets/pdf/Xtrategics - hackEPS Lleida 2018.pdf" target=_blank>Documentación reto Xtrategics</a></p>
              <b>Recompensa: ...</b> 
           </div>
           <div class="column-company">
@@ -65,7 +65,7 @@
              <p>
                 El mundo del Machine Learning es muy importante hoy en día para las grandes empresas, y como no, también lo es para una gran empresa como la que es BonÀrea, así pues, con el reto propuesto por ellos, deberéis aplicar Machine Learning sobre una serie de datos para poder contestar las preguntas que se os formularan a posteriori, es muy importante que detalléis bien tanto las respuestas que proporcionéis como las metodologías que habéis seguido para llegar a dicha conclusión. Si el Data Science es lo vuestro, este reto os encantará.
             </p>
-            <!--<p><a href="../assets/pdf/Presentacio_v4_castella.pdf" target=_blank>Documentación reto BonÀrea</a></p>-->
+            <p><a href="../assets/pdf/Presentacio_v4_castella.pdf" target=_blank>Documentación reto BonÀrea</a></p>
             <p>Tecnologías: Lenguaje a gusto del programador.</p>
             <b>Recompensa: 1000€ para la tienda de ingeniería de BonÀrea.</b>
           </div>
@@ -84,10 +84,10 @@
                  Un año mas, SEMIC nos presenta el SEMIC challenge. 5 retos ordenados de mas fácil a mas difícil donde tendréis que estrujaros el cerebro para resolverlos, los retos de SEMIC destacan por su creatividad así que tendréis que usar la imaginación i estar muy atentos a los detalles, para empezar la URL para acceder a la pagina de los retos está "encriptada", la complejidad no es precisamente máxima pero os dará una idea de lo que os depara.
             </p>
             <p> 
-                <!--URL de acceso al reto: 
+                URL de acceso al reto: 
                 <img src="../assets/flaticon/bee.png">
                 <img src="../assets/flaticon/drop.png">
-                <img src="../assets/flaticon/friendship.png">.semicinternet.com-->
+                <img src="../assets/flaticon/friendship.png">.semicinternet.com
             </p>
             <p>Tecnologías: Lenguje a gusto del programador.</p>
             <b>Recompensa: Apple Ipad Air 2 Wi-Fi + Celular (Uno por cada miembro del equipo).</b>
