--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div style="text-align:center">
        <br>
        <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
-       <a href="https://lleidahack.github.io/hackeps2018/"><img id="hackeps-logo" class="rounded transition-logo" src="../../assets/img/HACKEPSweb.png" alt="HackEps logo" style="max-width: 25%;"></a>
+       <a href="https://lleidahack.github.io/hackeps2018/"><img id="hackeps-logo" class="rounded transition-logo" src="/hackday/assets/img/HACKEPSweb.png" alt="HackEps logo" style="max-width: 25%;"></a>
        <div class='timer-font'>
           <countdown-timer
             class="timer-white-font"
@@ -19,7 +19,7 @@
        </h1>
        <div class="row">
           <div class="column-company">
-              <img src="../../assets/img/EPS.png" alt="Escola Politècnica Superior" class="company-logo">
+              <img src="/hackday/assets/img/EPS.png" alt="Escola Politècnica Superior" class="company-logo">
           </div>
           <div class="column-challenge">
              <h1 class='hackday-font-black'>Reto EPS</h1>
@@ -35,13 +35,13 @@
              <br><br><b>Recompensa: </b> (Recompensa)
           </div>
           <div class="column-company">
-              <img src="../../assets/img/xtrategics.png" alt="Escola Politècnica Superior" class="company-logo">
+              <img src="/hackday/assets/img/xtrategics.png" alt="Escola Politècnica Superior" class="company-logo">
           </div>
        </div>
        <hr>
        <div class="row">
           <div class="column-company">
-              <img src="../../assets/img/stratesys.png" alt="Escola Politècnica Superior" class="company-logo">
+              <img src="/hackday/assets/img/stratesys.png" alt="Escola Politècnica Superior" class="company-logo">
           </div>
           <div class="column-challenge">
              <h1 class='hackday-font-black'>Reto Stratesys</h1>
@@ -57,13 +57,13 @@
              <br><br><b>Recompensa: </b> (Recompensa)
           </div>
           <div class="column-company">
-              <img src="../../assets/img/bonarea.png" alt="Escola Politècnica Superior" class="company-logo">
+              <img src="/hackday/assets/img/bonarea.png" alt="Escola Politècnica Superior" class="company-logo">
           </div>
        </div>
        <hr>
        <div class="row">
           <div class="column-company">
-              <img src="../../assets/img/semic.png" alt="Escola Politècnica Superior" class="company-logo">
+              <img src="/hackday/assets/img/semic.png" alt="Escola Politècnica Superior" class="company-logo">
           </div>
           <div class="column-challenge">
              <h1 class='hackday-font-black'>Reto SEMIC</h1>
